Temporary fix issue with the drag out of viewport horizontal boundaries

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,11 +12,11 @@ body {
     ),
     url("./assets/brickwall-bg.jpg");
   background-repeat: repeat;
+  max-width: 100vw;
 }
 
 .app {
   min-height: 100vh;
-  max-width: 100vw;
 
   main {
     padding: 50px;
@@ -93,11 +93,13 @@ body {
     top: 2rem;
 
     .edit-input {
-      min-height: 100px;
+      min-height: 190px;
       max-height: 400px;
       border: 1px solid yellow;
+      margin-bottom: 0.5em;
       background-color: lightyellow;
-      width: 90%;
+      width: 100%;
+      resize: none;
     }
 
     .action-btn2 {
